force-app/main/default/objects/BLN_Corporate__c/fields/BLN_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>BLN_Vehicle__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Vehicle Object</description>
    <label>Vehicle</label>
    <referenceTo>BLN_Vehicle__c</referenceTo>
    <relationshipLabel>Corporates</relationshipLabel>
    <relationshipName>Corporates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>