force-app/main/default/objects/BLN_Corporate__c/fields/BLN_VehicleDamageExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleDamageExcess__c</fullName>
    <description>FOUK-4923 This is used in Productavailability class</description>
    <label>Vehicle Damage Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>