force-app/main/default/objects/BLN_Corporate__c/fields/BLN_VehicleMake__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleMake__c</fullName>
    <description>FOUK-5754, 6065: This field is created to store Vehicle Make</description>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>