force-app/main/default/objects/BLN_Corporate__c/fields/BLN_VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleModel__c</fullName>
    <description>FOUK-5754, 6065: This field is created to store Vehicle Model</description>
    <label>Provided Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>