force-app/main/default/objects/BLN_Corporate__c/fields/BLN_VehicleRegistration__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleRegistration__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Vehicle Registration</description>
    <label>VRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>