force-app/main/default/objects/BLN_Corporate__c/recordTypes/BLN_CorporateFleet.recordType-meta.xml
<RecordType>
    <fullName>BLN_CorporateFleet</fullName>
    <active>true</active>
    <description>This record type is created for Corporate/Fleet records</description>
    <label>Corporate/Fleet</label>
</RecordType>