force-app/main/default/objects/BLN_Corporate__c/recordTypes/BLN_Insurance.recordType-meta.xml
<RecordType>
    <fullName>BLN_Insurance</fullName>
    <active>true</active>
    <description>This record type is created for Insurance records</description>
    <label>Insurance</label>
</RecordType>