force-app/main/default/objects/BLN_Corporate__c/recordTypes/BLN_SpiltBill.recordType-meta.xml
<RecordType>
    <fullName>BLN_SpiltBill</fullName>
    <active>true</active>
    <description>This record type is created for Split Bill records</description>
    <label>Split Bill</label>
</RecordType>