force-app/main/default/objects/BLN_Corporate__c/validationRules/BLN_PolicyStartSmallerThanPolicyEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BLN_PolicyStartSmallerThanPolicyEndDate</fullName>
    <active>true</active>
    <description>FOUK-10331 Policy start date should be smaller than policy end date</description>
    <errorConditionFormula>BLN_PolicyEndDate__c &lt;= BLN_PolicyStartDate__c</errorConditionFormula>
    <errorMessage>Policy start date should be smaller than policy end date</errorMessage>
</ValidationRule>