force-app/main/default/objects/BLN_Corporate__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>BLN_GlassCoverFlag__c</columns>
    <columns>BLN_CorporateSite__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_InsuranceSite__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Satya</value>
    </filters>
    <label>All Records</label>
</ListView>