force-app/main/default/objects/BLN_Corporate__c/listViews/BVT_Tasks.listView-meta.xml
<ListView>
    <fullName>BVT_Tasks</fullName>
    <columns>BLN_InsuranceSite__c</columns>
    <columns>NAME</columns>
    <columns>BLN_Origin__c</columns>
    <columns>BLN_IsPolicyValid__c</columns>
    <filterScope>Everything</filterScope>
    <label>BVT Tasks</label>
</ListView>